<resources>
    <string name="app_name">DoAnDiDong-ThiToeic</string>
    <string name="toeic_title">Thi Toeic</string>
    <string name="thread_number_one">Đề số 1</string>
    <string name="thread_number_two">Đề số 2</string>
    <string name="thread_number_three">Đề số 3</string>
    <string name="thread_number_four">Đề số 4</string>
    <string name="thread_number_five">Đề số 5</string>
    <string name="thread_number_six">Đề số 6</string>
    <string name="result_toeic">Kết quả</string>
    <string name="toeic_textview_one">Đề số 1</string>
    <string name="toeic_textview_two">Thời gian : 45 phút</string>
    <string name="toeic_textview6_one">Đề số 6</string>
    <string name="toeic_textview6_two">Thời gian : 45 phút</string>
    <string name="Part3">Đề Số 3 \n time: 45 minutes</string>
    <string name="btn_Submit">Nộp bài</string>
    <string name="btnNopBai">Nộp bài</string>
    <string name="btn6_Submit">Nộp bài</string>
</resources>